# shelfard

./: .dockerignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  run_tests.py  shelfard.py
.github/workflows/: python-package-conda.yml
Formula/: shelfard.rb
docker/: Dockerfile.playground  Dockerfile.test  test.sh
shelfard/: __init__.py  agent.py  cli.py  mcp_server.py  models.py  registry.py  schema_comparison.py  type_normalizer.py
shelfard/checkers/: __init__.py  base.py  rest.py
shelfard/parsers/: __init__.py  json_file_reader.py  json_reader.py
shelfard/readers/: __init__.py  base.py
shelfard/readers/bigquery/: __init__.py
shelfard/readers/postgres/: __init__.py
shelfard/readers/rest/: __init__.py
shelfard/readers/snowflake/: __init__.py
shelfard/readers/sqlite/: __init__.py
shelfard/registry/: __init__.py  base.py  gcs.py  local.py  s3.py  sql.py
shelfard/tools/postgres/: checker.py
shelfard/tools/rest/: checker.py
tests/: test_rest_reader.py  vars_tests.py
